--- a/kitty.conf
+++ b/kitty.conf
@@ -1,21 +1,23 @@
+font_family JetBrainsMono NF
+font_size 11
+
 dynamic_background_opacity yes
 background_blur 1 
 background_opacity 0.6
 
-font_family      Victor Mono Medium
-bold_font        Victor Mono Bold
-italic_font      Victor Mono Medium Italic
-bold_italic_font Victor Mono Bold Italic
-
-font_size 12
-
-adjust_line_height  150%
-modify_font strikethrough_position 10px
-
-symbol_map U+f101-U+f27d nonicons
-
-modify_font underline_position 3
-modify_font underline_thickness 150%
-
+cursor_shape block
+cursor_stop_blinking_after 0
+scrollback_lines 2000
+copy_on_select yes
+mouse_hide_wait 0
+select_by_word_characters @-./_~?&=%+#a
+enable_audio_bell no
+bell_on_tab "🔔 "
+remember_window_size  no
+window_border_width 1pt
+draw_minimal_borders yes
+window_padding_width 10
+inactive_text_alpha 0.6
+hide_window_decorations yes
 confirm_os_window_close 0
-
+tab_bar_style powerline
